--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -16,4 +16,5 @@ server.port=2333
 # logging.level.root=debug
 # \u8BBE\u7F6Eweb\u7EC4\u7684\u65E5\u8BB0\u7EA7\u522B\u4E3Adebug
 logging.level.web=debug
+logging.group.web=xyz.xmh
 
