新增序列化器，redis缓存实例示例

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -10,10 +10,12 @@
 # See the Mulan PSL v2 for more details.
 #
 # \u963F\u91CC\u4E91\u76D8\u7684\u5237\u65B0\u4EE4\u724C
-xyz.xmh.client.refresh-token=
+xyz.xuminghai.client.refresh-token=
 # \u670D\u52A1\u7AEF\u53E3
 server.port=2333
 # logging.level.root=debug
-# \u8BBE\u7F6Eweb\u7EC4\u7684\u65E5\u8BB0\u7EA7\u522B\u4E3Adebug
 logging.level.web=debug
-logging.group.web=xyz.xuminghai
+logging.level.xyz.xuminghai=debug
+logging.level.com.esotericsoftware.kryo=trace
+# \u8BBE\u7F6E\u7F13\u5B58\u5B9E\u73B0\u4E3Aredis
+#xyz.xuminghai.cache.cache-instance=xyz.xuminghai.test.RedisCache
