--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
     <groupId>xyz.xuminghai</groupId>
     <artifactId>aliyundrive-client-spring-boot-starter</artifactId>
-    <version>0.0.5-alpha</version>
+    <version>0.0.6-alpha</version>
     <packaging>jar</packaging>
 
     <description>这是一个基于WebFlux.WebClient的阿里云盘客户端</description>
@@ -51,7 +51,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.6</version>
+        <version>2.6.0</version>
     </parent>
 
 
@@ -107,6 +107,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
             <optional>true</optional>
         </dependency>
 
