重新修改获取资源

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -18,4 +18,4 @@ logging.level.web=debug
 logging.level.xyz.xuminghai=debug
 logging.level.com.esotericsoftware.kryo=trace
 # \u8BBE\u7F6E\u7F13\u5B58\u5B9E\u73B0\u4E3Aredis
-#xyz.xuminghai.cache.cache-instance=xyz.xuminghai.test.RedisCache
+xyz.xuminghai.cache.cache-instance=xyz.xuminghai.test.RedisCache
