--- a/pom.xml
+++ b/pom.xml
@@ -18,15 +18,17 @@
 
     <groupId>xyz.xuminghai</groupId>
     <artifactId>aliyundrive-client-spring-boot-starter</artifactId>
-    <version>0.0.6-alpha</version>
+    <version>0.0.7-alpha</version>
     <packaging>jar</packaging>
 
     <description>这是一个基于WebFlux.WebClient的阿里云盘客户端</description>
 
+    <!-- 开源地址 -->
     <scm>
         <url>https://gitee.com/xuminghai123/aliyundrive-client-spring-boot-starter</url>
     </scm>
 
+    <!-- 开源协议 -->
     <licenses>
         <license>
             <name>Mulan Permissive Software License，Version 2 (Mulan PSL v2)</name>
@@ -34,6 +36,7 @@
         </license>
     </licenses>
 
+    <!-- 开发人员信息 -->
     <developers>
         <developer>
             <name>xuMingHai</name>
@@ -51,7 +54,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.0</version>
+        <version>2.6.1</version>
     </parent>
 
 
@@ -70,12 +73,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <optional>true</optional>
         </dependency>
 
         <dependency>
